--- a/src/pages/deontologia/index.astro
+++ b/src/pages/deontologia/index.astro
@@ -38,6 +38,15 @@ import BaseLayout from "../../layouts/BaseLayout.astro";
       </p>
 
       <p>
+       La necesidad de ampliar la perspectiva desde la que abordar los problemas éticos contemporáneos
+       y de confrontar enfoques socioculturales y normativos diversos ha ido orientando mi interés
+       hacia la bioética y la ética aplicada, particularmente en ámbitos como la tecnología,
+       la gobernanza de las relaciones humanas y el medioambiente, en permanente diálogo con programas desarrollados
+       en universidades como <em>Harvard University</em>, la <em>University of Michigan</em>,
+       la Universidad Autónoma de Querétaro y la Universidad Nacional de Educación a Distancia.
+
+     </p>
+      <p>
         En paralelo a la actividad institucional, desarrollo una línea de trabajo
         académico orientada al análisis formal de los códigos deontológicos profesionales.
         Mi investigación se centra en la aplicación de herramientas de lógica normativa
