--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ const description = "Dirección IT · Gestión Ambiental · Ética profesional";
     <h2>Sobre mí</h2>
 	<p>
 	Creo, en primer lugar, necesario advertir que este espacio no pretende sustituir una presentación profesional convencional ni ofrecer una síntesis curricular. 
-	El <em>qué</em> de mi trayectoria académica y profesional puede consultarse de forma esquemática en <a href="https://www.linkedin.com/victorcazorla-f/" target="_blank" rel="noopener">LinkedIn</a>. 
+	El <em>qué</em> de mi trayectoria académica y profesional puede consultarse de forma esquemática en mi Linkedin (citado bajo el texto). 
 	Esta web, en cambio, se sitúa deliberadamente en el plano del <em>cómo</em>: el modo en que pienso los problemas,
 	los criterios desde los que interpreto mi práctica y los marcos conceptuales que orientan mis decisiones. 
 	El contenido que sigue no responde, por tanto, a una lógica descriptiva, sino reflexiva; pretendiendo exponer desde dónde se articula una determinada forma de estar y de actuar profesionalmente.
